Avoid menu overlapping on logo on small screens

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -76,8 +76,4 @@ body {
 		text-align: left;
 		line-height: 1.5;
 	}
-
-	.large.screen.only {
-		display: none;
-	}
 }
