--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ header {
 	background-repeat: no-repeat;
 	background-size: contain;
 	background-position: left center;
-	padding-right: 2em;
+	padding-right: 1.5em;
 	margin-right: .8em;
 }
 
@@ -211,6 +211,10 @@ a.ui.card {
 
 	#masthead {
 		padding: 2em;
+	}
+
+	.large.screen.only {
+		display: none !important;
 	}
 }
 
